--- a/index.html
+++ b/index.html
@@ -1,47 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Special Gift</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Renz Portfolio</title>	
+	<link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="greetings">
-        
-        <span>G</span>
-        <span>O</span>
-        <span>O</span>
-        <span>D</span>
-        <span> </span>
-        <span>M</span>
-        <span>O</span>
-        <span>R</span>
-        <span>N</span>
-        <span>I</span>
-        <span>N</span>
-        <span>G</span>
-        <br>
-        <span>M</span>
-        <span>E</span>
-        <span>L</span>
-        <span>A</span>
-        <span>N</span>
-        <span>I</span>
-        <span>E</span>
-    </div>
-    <div class="description">
-        <span>Hello love, ako rani gihimo para mogreet ko good morning kay basin late ko momata HAHAHA charr. Bitaw, sorry kaayo sa ako mga insensitive nga mga actions towards nimo ha sala jud to nako man. Thank you kay always ka mosabot nako sag usahay gahion ko gamay ug ulo, nya sige lang buotan man sad ko sige HAHA. Pagbinuotan diha ug unta mingawon naka nako aron makauli najud ka charr. Thank you sa tanan, sauna ideal girl ra tika baya and ana jud ko ato jud pirmi nako ni ibalik “swertea kaayos mapartner niya(nimo” sag di ko motuo ug swerte HAHAHA. And now sus nakasulay najud kog handle sa buotan nga Melanie aww, nakatabang sad ka sa ako paggrow uy naa nako pasensya gamay and kabalo nako moangkon ug sayop. Always keep your faith in God jud lan, Siya ang hinungdan nganong naa ka diha ron. Mingaw naka nako no? okay rana ako sad HAHAH. Amping ka always ug salamat kay motahod sad ka nako usahay. Layoa na kaayo ta naabot uy telegram, messages sa cp, gmail ug asa pa meant to be jud daguy ta aw. Mao di ay ate ako tawag nimo sauna kay ikaw di ay “ATEnitibok” ng puso ko jeje uy. Bitaw daghan nasad ta naagian aning atong relasyon na daguy ni? HAHAH nikatawa, nasuko, nihilak, naglagot, napikon ug unsa pang uban and naa ra gihapon ta diri trying to understand sa usag-usa. Thank you kaayo sa Ginoo ana. Continue in faith lan. And unta di ka mabalaw sa akong pagkabulyagon HAHAHA. This is my way to express my love para nimooo. And expect more charr HAHA, so mao natooo hehe unya nako matulog haaa charr. Bye na my “yess yess” , “gorss” and “ana jud” charr HAHA. BYEE LOVEE❤️    
-
-Here's a flower for the most isog nga love²:</span>
+<body>	
+<header>
+<h1>JESUS</h1>
+<nav>
+<a href="#home">Home</a>
+<a href="#about">About</a>
+<a href="#services">Services</a>
+<a href="#contact">Contact</a>
+</nav>
+</header>
+<section class="Home" id="home"> 
+<div class="text-box">
+<h1>Hi	, I'm Renz Ryle Venan</h1>
+<h1>
+and I'm a
+<span class="skills">Worshiper</span>
+</h1>
+<p><em> "For to me, to live is Christ and to die is gain." <br> -Philippians 1:21 </em></p>
 </div>
-    <div class="button">
-        <button>
-            <a href="flower.html">Click ME</a>
-        </button>
-        
-    </div>
+</div>
+<div class="img-box">
+<img src="./img.png" class="img" alt="">
+</section>
+
+<section class="About" id="about"> 
+<div class="text-boxer">
+<h1><em>GOD'S PLAN OF  SALVATION</em></h1>
+<br>
+<h1>
+1. HEAR THE GOSPEL <br>
+<span class="skills">Romans 10:17 - Faith comes by hearing</span> 
+</h1>
+<h1>
+2. BELIEVE THE GOSPEL (FAITH) <br>
+<span class="skills">Hebews 11:6 - Without faith  it is impossible to please God</span> 
+</h1>
+<h1>
+3. REPENT OF YOUR SINS <br>
+<span class="skills">Luke 13:3 - Repent or Perish</span> 
+</h1>
+<h1>
+4. CONFESS CHRIST AS THE SON OF GOD <br>
+<span class="skills">Romans 10:9-10 - Confess with the mouth "Jesus is Lord"</span> 
+</h1>
+<h1>
+5. BE BAPTIZED FOR THE REMISSION OF YOUR SINS <br>
+<span class="skills">Acts 2:38 - Be baptized for the remission of sins</span> 
+</h1>
+<h1>
+6. AS A CHRISTIAN, WE MUST LIVE FAITHFUL <br>
+<span class="skills">Matthew 10:22 - Endure to the end</span> 
+</h1>
+<p><em> <b> BUNLAN CHURCH OF CHRIST </b> <br> "He said to them, "Go into the world and preach the gospel to all creation. 
+<br> Whoever believes and is baptized will be save, but whoever does not believe will be condemned. 
+<br>- Mark 16:15-16</em></p>
+</div>
+</div>
+<div class="img-boxes">
+<img src="./renz.png" class="img" alt="">
+</section>
+
+
+<section class="Services" id="services"> 
+<div class="text-boxyu">
+<h1>
+Bunlan Church of Christ offers
+<span class="skills">bible studies, home visitations, bible-based moral trainings and counsellings.</span>
+</h1>
+<p><em><b>WORSHIP SCHEDULES: </b><br><br> Sunday Service - 9:30 - 11:30AM <br> Prayer Fellowship - 7:00 - 9:00PM</em></p>
+</div>
+</div>
+<div class="img-boxyu">
+<img src="./venan.png" class="img" alt="">
+</section>
+
+<section class="Contact" id="contact"> 
+<div class="text-boxyu">
+<h1>
+You may reach and communicate with us at
+<span class="skills"><a href="https://www.facebook.com/100086239672030"> <em>Bunlan Church of Christ </em></a></span>
+</h1>
+<p><em>"Let us think of ways to motivate one another to acts of love and good works. And let us not neglect our meeting together, as some people do, but encourage one another, especially now that the day of his return is drawing near." <br> -Hebrews 10:24-25</em></p>
+</div>
+</div>
+<div class="img-boxyu">
+<img src="./ryle.png" class="img" alt="">
+</section>
+
 </body>
 </html>
